# LVK-Shading

./: .gitmodules  CMakeLists.txt  README.md
flat/: CMakeLists.txt
flat/src/: flat_phong.cpp
gooch/: CMakeLists.txt
gouraud/: CMakeLists.txt
gouraud/src/: gouraud.cpp
phong/: CMakeLists.txt
phong/src/: phong.cpp  sphere_data.h
psx/: CMakeLists.txt
psx/src/: psx.cpp
resources/models/: monkey.glb  teapot.glb
resources/shaders/: common.sp  flat_phong.frag  flat_phong.vert  gooch.frag  gooch.vert  gouraud.frag  gouraud.vert  main.frag  main.vert  outline.frag  outline.vert  phong.frag  psx.frag  psx.vert  skybox.frag  skybox.vert  toon.frag  toon.vert
shared/: camera.h  model_loader.h  shader_processor.h  sphere_data.h  utils_cubemap.h  utils_math.h
skybox/: CMakeLists.txt
skybox/src/: skybox.cpp
src/: main.cpp  model_loader.h  sphere_data.h
toon/: CMakeLists.txt
toon/src/: toon.cpp
